# social_media_feed

./: .gitignore  README.md  create_secret_key.py  env-example  main.py  pyproject.toml
templates/: header.html  index.html  login.html
