
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gabriel Martin del Campo y Eternod", email = "gmartindelcye@gmail.com"},
]
dependencies = [
    "fastapi-login>=1.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.22.0",
    "jinja2>=3.1.2",
]
requires-python = ">=3.10"
license = {text = "}"}
